--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             <span class="overlay"></span>
 
                             <div class="project-image">
-                                <img src="images/" alt="project 1" class="project-img">
+                                <img src="images/olivia1.png" alt="project 1" class="project-img">
                             </div>
                         </div>
 
@@ -40,7 +40,7 @@
                             <span class="overlay"></span>
 
                             <div class="project-image">
-                                <img src="images/" alt="project 2" class="project-img">
+                                <img src="images/olivia1.png" alt="project 2" class="project-img">
                             </div>
                         </div>
 
@@ -56,7 +56,7 @@
                             <span class="overlay"></span>
 
                             <div class="project-image">
-                                <img src="images/" alt="project 3" class="project-img">
+                                <img src="images/olivia1.png" alt="project 3" class="project-img">
                             </div>
                         </div>
 
@@ -72,7 +72,7 @@
                             <span class="overlay"></span>
 
                             <div class="project-image">
-                                <img src="images/" alt="project 4" class="project-img">
+                                <img src="images/olivia1.png" alt="project 4" class="project-img">
                             </div>
                         </div>
 
