--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
 
-                        <div class="card-content">
+                        <div class="project-content">
                             <h2 class="name">project 3</h2>
                             <p class="description">project 3 reviewed by diggle.</p>
 
@@ -76,7 +76,7 @@
                             </div>
                         </div>
 
-                        <div class="card-content">
+                        <div class="project-content">
                             <h2 class="name">project 4</h2>
                             <p class="description">project 4 reviewed by diggle.</p>
 
